--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
     <!-- CUERPO -->
     <main id="Registrarse">
-        <div class="container">
-            <div class="row">
-                <h1>Registrarse</h1>
-            </div>
+        <div class="container-fluid">
             <form action="">
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -62,10 +59,6 @@
                     <input type="text" class="form-control" id="inputIdentification" placeholder="DNI/Carnet de extranjeria">
                 </div>
                 <div class="form-group">
-                        <label for="inputEmail">Correo Electrónico</label>
-                        <input type="text" class="form-control" id="inputEmail" placeholder="Correo Electrónico">
-                    </div>
-                <div class="form-group">
                     <label for="inputCompany">Empresa</label>
                     <input type="text" class="form-control" id="inputCompany" placeholder="Empresa">
                 </div>
@@ -76,7 +69,7 @@
                     </div>
                     <div class="form-group col-md-6">
                         <label for="inputMensaje">Mensaje</label>
-                        <textarea name="message" class="form-control" id="inputMenssage" placeholder="Mensaje" rows="5"></textarea>
+                        <input type="text" class="form-control" id="inputMenssage" placeholder="Mensaje">
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" id="btnEnviar">Enviar</button>
@@ -103,9 +96,41 @@
 
     <!-- ++++++++++++++++++++ END THE CODE ++++++++++++++++++++ -->
 
-    <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/data.js"></script>
+    <!-- CONEXIÓN FIREBASE -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyBOP5edWurMShfnlciKhMbK3j7lEJ0ZawI",
+            authDomain: "youwork-c0d99.firebaseapp.com",
+            databaseURL: "https://youwork-c0d99.firebaseio.com",
+            projectId: "youwork-c0d99",
+            storageBucket: "youwork-c0d99.appspot.com",
+            messagingSenderId: "350271671798"
+        };
+        firebase.initializeApp(config);
+
+        //-------------------- DOM ----------------------------------------------
+        const nameTxt = document.getElementById('inputName');
+        const lastName = document.getElementById('inputLastName');
+        const identification = document.getElementById('inputIdentification');
+        const company = document.getElementById('inputCompany');
+        const anfitrion = document.getElementById('inputAnfitrion');
+        const menssage = document.getElementById('inputMenssage');
+        const btnEnviar = document.getElementById('btnEnviar');
+
+        btnEnviar.addEventListener('click', () => {
+            const name = nameTxt.value;
+            const apellido = lastName.value;
+            const identificacion = identification.value;
+            const empresa = company.value;
+            const anfitrions = anfitrion.value;
+            const mensaje = menssage.value;
+            alert(name);
+            firebase.database().
+        })
+    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
