--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- CUERPO -->
     <main id="Registrarse">
-        <div class="container-fluid">
+        <div class="container">
             <form action="">
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -76,27 +76,8 @@
             </form>
         </div>
     </main>
-    <!-- <form>
-        <div>
-            <label for="party">Elija la fecha de festejo que prefiera (obligatorio, del 1.º al 20 de abril):</label>
-            <input type="date" id="party" name="party" min="2017-04-01" max="2017-04-20" required>
-            <span class="validity"></span>
-        </div>
-        <div>
-            <input type="submit">
-        </div>
-    </form> -->
-
-
-
-
-
-
-
-
     <!-- ++++++++++++++++++++ END THE CODE ++++++++++++++++++++ -->
 
-    <!-- CONEXIÓN FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -109,28 +90,8 @@
             messagingSenderId: "350271671798"
         };
         firebase.initializeApp(config);
-
-        //-------------------- DOM ----------------------------------------------
-        const nameTxt = document.getElementById('inputName');
-        const lastName = document.getElementById('inputLastName');
-        const identification = document.getElementById('inputIdentification');
-        const company = document.getElementById('inputCompany');
-        const anfitrion = document.getElementById('inputAnfitrion');
-        const menssage = document.getElementById('inputMenssage');
-        const btnEnviar = document.getElementById('btnEnviar');
-
-        btnEnviar.addEventListener('click', () => {
-            const name = nameTxt.value;
-            const apellido = lastName.value;
-            const identificacion = identification.value;
-            const empresa = company.value;
-            const anfitrions = anfitrion.value;
-            const mensaje = menssage.value;
-            alert(name);
-            firebase.database().
-        })
     </script>
-    <script src="index.js"></script>
+    <script src="js/data.js"></script>
 </body>
 
 </html>
