--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary" id="btnEnviar">Enviar</button>
+                
             </form>
         </div>
     </main>
@@ -88,13 +89,13 @@
             <div class="row mt-5">
                 <div class="col-md-12 text-center">
                     <video autoplay="true" width="400" height="200"></video>
-                    <canvas width="250" height="200"></canvas>
+                    <canvas id="canvas" width="250" height="200"></canvas>
                 </div>
             </div>
             <div class="row mt-5">
                 <div class="col-md-12 text-center">
-                    <button type="submit" class="btn btn-primary" id="start">Empezar</button>
-                    <button type="submit" class="btn btn-primary" id="capture">Capturar imagen</button>
+                    <button type="submit" class="btn btn-primary" id="btnStarts">Empezar</button>
+                    <button type="submit" class="btn btn-primary" id="btnCapture">Capturar imagen</button>
                 </div>
             </div>
 
