--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
     <!-- ++++++++++++++++++++ END THE CODE ++++++++++++++++++++ -->
     <script src="js/data.js"></script>
+    <script src="js/mandrill.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
     <script>
         // Initialize Firebase
