--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="form-row">
                     <div class="form-group col-md-6">
                             <label for="exampleFormControlSelect1">Example select</label>
-                            <select class="form-control" id="exampleFormControlSelect1">
+                            <select class="form-control" id="selector">
                               <option value="mkvicunaore@gmail.com">Mary Katty</option>
                               <option value="tizce2598@gmail.com">Leyla Tycze</option>
                             </select>
@@ -107,7 +107,7 @@
     </section>
 
     <!-- ++++++++++++++++++++ END THE CODE ++++++++++++++++++++ -->
-    
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
     <script>
         // Initialize Firebase
