--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <!-- CUERPO: FORMULARIO REGISTRO DEL CLIENTE -->
     <main id="registrarse" class="hidden">
         <div class="container" id="principal">
-            <div class="row">
-                <h1>Registre sus datos</h1>
+            <div class="row" id="titleRegister">
+                <h1 class="align-items-center">Registre sus datos</h1>
             </div>
             <form id="convalidaciones">
                 <div class="form-row mt-5">
@@ -94,11 +94,11 @@
 
 
     <!-- MOSTRAR RESULTADOS: LADO DEL ADMINISTRADOR -->
-    <div id="results" class="hidden">
-        <div class="container" id="principal">
+    <div id="results" class="hidden mt-5">
+        <div class="container" id="principal" >
             <h2>DATA DASBOARD</h2>
             <p></p>
-            <table class="table table-hover">
+            <table class="table table-hover mt-5">
                 <thead>
                     <tr>
                         <th>Foto</th>
